gitops/gitea/gitea-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: demo-project
  labels:
    app: postgresql
    app.kubernetes.io/part-of: gitea

spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: centos/postgresql-12-centos7
          volumeMounts:
            - name: postgresql-data
              mountPath: /var/lib/pgsql/data
      volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: postgresql-data
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: demo-project
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgresql
