gitops/gitea/gitea-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitea
  namespace: demo
spec:
  to:
    kind: Service
    name: gitea
  port:
    targetPort: http
  tls:
    termination: edge
